--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <title>Omnifood</title>
     </head>
     <body>
+        <header class="header">
+            <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
+            <nav class="main-nav">Navigation</nav>
+        </header>
         <section class="section-hero">
             <div class="hero">
                 <div class="hero-text-box">
