--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <body>
         <header class="header">
             <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
-            <nav class="main-nav">Navigation</nav>
+            <nav class="main-nav">
+                <ul class="main-nav-list">
+
+                </ul>
+
+            </nav>
         </header>
         <section class="section-hero">
             <div class="hero">
