--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
             <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
             <nav class="main-nav">
                 <ul class="main-nav-list">
-
+                    <li><a class="main-nav-link" href="#">Seaction 1</a></li>
+                    <li><a class="main-nav-link" href="#">Seaction 2</a></li>
+                    <li><a class="main-nav-link" href="#">Seaction 3</a></li>
+                    <li><a class="main-nav-link" href="#">Seaction 4</a></li>
+                    <li><a class="main-nav-link nav-cta" href="#">Seaction 5</a></li>
                 </ul>
 
             </nav>
