--- a/index.html
+++ b/index.html
@@ -52,5 +52,13 @@
                 </div>
             </div>
         </section>
+        <section class="section-how">
+            <div class="container">
+                <span class="subheading">How it Works</span>
+                <h2 class="heading-secondary">Your daily dose of health on 3 simple steps</h2>
+            </div>
+        </section>
+
+        
     </body>
 </html>
