--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/general.css">
+
         <title>Omnifood</title>
     </head>
     <body>
@@ -58,7 +60,7 @@
                 <h2 class="heading-secondary">Your daily dose of health on 3 simple steps</h2>
             </div>
 
-            <div class="container grid grid--2-cols">
+            <div class="container grid grid--2-cols grid--center-v">
                 <!-- STEP 01 -->
                 <div class="step-text-box">
                     <p class="step-number">01</p>
